# cuddly-barnacle

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_initial.sql  0002_add_user_role.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  health.rs
backend/src/middleware/: auth.rs
backend/src/models/: models.rs
backend/src/routes/: mod.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/lib/components/: Footer.svelte  Header.svelte
frontend/src/lib/stores/: auth.ts  cart.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/signup/: +page.svelte
